// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SelectNetwork should render 1`] = `
<div>
  <div>
    <ul
      class="inline-block"
      data-testid="network__option"
    />
    <div
      class="sc-AxiKw jQtkkF relative ml-2 cursor-pointer border-theme-primary-100"
      data-testid="network__viewall"
    >
      <div
        class="text-sm font-semibold text-theme-primary-500"
      >
        All
      </div>
      <span
        class="sc-AxirZ nnMcM flex border-2 rounded-full justify-center w-5 h-5 items-center align-middle absolute bg-theme-background border-transparent border-theme-primary-100 -bottom-1 -right-4 text-theme-primary-500"
      >
        <div
          class="sc-AxjAm kzGOk"
          height="18"
          width="18"
        >
          <svg>
            chevron-down.svg
          </svg>
        </div>
        <span />
      </span>
    </div>
  </div>
</div>
`;

exports[`SelectNetwork should render with icon 1`] = `
<div>
  <div>
    <ul
      class="inline-block"
      data-testid="network__option"
    >
      <li
        class="inline-block mr-5 cursor-pointer"
        data-testid="network__option--0"
      >
        <div
          class="sc-AxiKw jQtkkF relative border-theme-neutral-200 text-theme-neutral-300"
        >
          <div
            class="sc-AxjAm buCJuk"
            height="20"
            width="20"
          >
            <svg>
              ark.svg
            </svg>
          </div>
          <span
            class="sc-AxirZ nnMcM flex border-2 rounded-full justify-center w-5 h-5 items-center align-middle absolute bg-theme-background border-transparent border-theme-neutral-200 -bottom-1 -right-4"
          >
            <span />
          </span>
        </div>
      </li>
      <li
        class="inline-block mr-5 cursor-pointer"
        data-testid="network__option--1"
      >
        <div
          class="sc-AxiKw jQtkkF relative border-theme-success-500 text-theme-success-500"
        >
          <div
            class="sc-AxjAm buCJuk"
            height="20"
            width="20"
          >
            <svg>
              eth.svg
            </svg>
          </div>
          <span
            class="sc-AxirZ nnMcM flex border-2 rounded-full justify-center w-5 h-5 items-center align-middle absolute bg-theme-background border-transparent -bottom-1 -right-4 bg-theme-success-500 text-theme-success-contrast"
          >
            <div
              class="sc-AxjAm HWmvM"
              height="12"
              width="12"
            >
              <svg>
                checkmark.svg
              </svg>
            </div>
            <span />
          </span>
        </div>
      </li>
      <li
        class="inline-block mr-5 cursor-pointer"
        data-testid="network__option--2"
      >
        <div
          class="sc-AxiKw jQtkkF relative border-theme-neutral-200 text-theme-neutral-300"
        >
          <div
            class="sc-AxjAm buCJuk"
            height="20"
            width="20"
          >
            <svg>
              btc.svg
            </svg>
          </div>
          <span
            class="sc-AxirZ nnMcM flex border-2 rounded-full justify-center w-5 h-5 items-center align-middle absolute bg-theme-background border-transparent border-theme-neutral-200 -bottom-1 -right-4"
          >
            <span />
          </span>
        </div>
      </li>
    </ul>
    <div
      class="sc-AxiKw jQtkkF relative ml-2 cursor-pointer border-theme-primary-100"
      data-testid="network__viewall"
    >
      <div
        class="text-sm font-semibold text-theme-primary-500"
      >
        All
      </div>
      <span
        class="sc-AxirZ nnMcM flex border-2 rounded-full justify-center w-5 h-5 items-center align-middle absolute bg-theme-background border-transparent border-theme-primary-100 -bottom-1 -right-4 text-theme-primary-500"
      >
        <div
          class="sc-AxjAm kzGOk"
          height="18"
          width="18"
        >
          <svg>
            chevron-down.svg
          </svg>
        </div>
        <span />
      </span>
    </div>
  </div>
</div>
`;
